[package]
name = "auction-house"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.9.6"
anchor-lang = "=0.20.1"
anchor-spl = "=0.20.1"
spl-token = { version = "=3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.2.4", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arrayref = "0.3.6"
